--- a/src/shared/ui/templates/centered/centred-template.module.css
+++ b/src/shared/ui/templates/centered/centred-template.module.css
@@ -4,4 +4,9 @@
   display:flex;
   justify-content:center;
   align-items:center;
+  font-weight:700;
+  font-size:32px;
+  line-height:40px;
+  text-align:center;
+  color:#A7A7A7;
 }
