--- a/src/widgets/book-cards/ui/book-cards-wrapper.module.css
+++ b/src/widgets/book-cards/ui/book-cards-wrapper.module.css
@@ -7,7 +7,7 @@
   box-shadow:0 3px 4px rgba(222, 125, 11, 0.2), 0 1px 10px rgba(249, 89, 8, 0.2);
 }
 .columnCardsStyle {
-  grid-template-columns:repeat(auto-fit, minmax(190px, 1fr));
+  grid-template-columns:repeat(auto-fill, minmax(190px, 1fr));
 }
 @media screen and (max-width:768px) {
   .container {
