--- a/src/widgets/header/header.module.css
+++ b/src/widgets/header/header.module.css
@@ -82,7 +82,7 @@
   width:100%;
   height:calc(100vh - 100%);
   max-width:500px;
-  overflow:scroll;
+  overflow-y:scroll;
 }
 @media screen and (max-width:1142px) {
   .header {
