fix(sprint4): fix styles search text according figma styles

--- a/src/entities/books-tool/ui/search-filter/search.module.css
+++ b/src/entities/books-tool/ui/search-filter/search.module.css
@@ -25,9 +25,10 @@
   caret-color:rgb(248, 54, 0);
 }
 .searchTextActivated {
-  background:linear-gradient(231.58deg, #F83600 -53.35%, #F9D423 297.76%);
+  /* После спринтов вернуть стили */
+  /* background:linear-gradient(231.58deg, #F83600 -53.35%, #F9D423 297.76%);
   -webkit-background-clip:text;
-  -webkit-text-fill-color:transparent;
+  -webkit-text-fill-color:transparent; */
 }
 .searchActivated path {
   fill:url(#paint0_linear_472_38319);
