--- a/src/entities/book/ui/short-navigation/short-navigation.module.css
+++ b/src/entities/book/ui/short-navigation/short-navigation.module.css
@@ -2,25 +2,27 @@
   position:relative;
   display:flex;
   padding:20px 0;
+  margin-bottom:42px;
+  background-color:rgb(249, 249, 250);
   color:rgb(167, 167, 167);
 }
-.shortNavWrapper span {
+.shortNav {
   z-index:2;
-}
-.shortNavWrapper:after {
-  z-index:1;
-  content:'';
-  position:absolute;
-  top:0;
-  left:50%;
-  transform:translateX(-50vw);
-  height:100%;
-  width:100vw;
-  background-color:rgb(249, 249, 250);
+  padding:0 16px;
+  /* width = 16 + 1110 + 16 */
+  max-width:1142px;
+  width:100%;
+  margin:0 auto;
 }
 @media screen and (max-width:320px) {
   .shortNavWrapper {
     font-size:12px;
     line-height:16px;
+  }
+}
+@media screen and (max-width:768px) {
+  .shortNav {
+    /* width = 16 + 640 + 16 */
+    max-width:672px;
   }
 }
