--- a/src/pages/profile/ui/profile-page.module.css
+++ b/src/pages/profile/ui/profile-page.module.css
@@ -2,6 +2,10 @@
   display:flex;
   flex-direction:column;
   row-gap:92px;
+  padding:0 16px;
+  /* width = 16 + 1110 + 16 */
+  max-width:1142px;
+  width:100%;
 }
 /* flexbox personInfo */
 .wrapper > div:first-child {
@@ -17,8 +21,9 @@
 @media screen and (max-width:768px) {
   .wrapper {
     row-gap:64px;
+    /* width = 16 + 640 + 16 */
+    max-width:672px;
   }
-
 }
 @media screen and (max-width:320px) {
   .wrapper {
