--- a/src/widgets/header/ui/header.module.css
+++ b/src/widgets/header/ui/header.module.css
@@ -20,7 +20,7 @@
   /*position:sticky;
   top:0;*/
   margin:17px auto 27px;
-  padding:24px 0 24px 0;
+  padding:24px 16px;
   background-color:rgb(255, 255, 255);
 }
 .header h1 {
