--- a/src/entities/form-input/ui/form-input.module.css
+++ b/src/entities/form-input/ui/form-input.module.css
@@ -44,8 +44,11 @@
   background:rgb(249, 249, 250);
   border-radius:4px;
 }
-.blurForTest:has(+ div) {
+.hidden:has(~ div) {
   display:none;
+}
+.blurForTest {
+
 }
 .emptyInput > div {
   display:none;
