fix(loader): style kit swiper-lazy-preloader

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -75,3 +75,18 @@ select {
   width:9px;
   height:9px;
 }
+.swiper-lazy-preloader {
+  width:42px;
+  height:42px;
+  position:absolute;
+  left:50%;
+  top:50%;
+  margin-left:-21px;
+  margin-top:-21px;
+  z-index:10;
+  transform-origin:50%;
+  box-sizing:border-box;
+  border-radius:50%;
+  background:0;
+  border:none;
+}
